src/objects/inscor__Expense_Report_Line__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Expense_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense Category</label>
        <referenceTo>inscor__Expense_Category__c</referenceTo>
        <relationshipLabel>Expense Report Lines</relationshipLabel>
        <relationshipName>Expense_Report_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Expense_Report__c</fullName>
        <label>Expense Report</label>
        <referenceTo>inscor__Expense_Report__c</referenceTo>
        <relationshipLabel>Expense Report Lines</relationshipLabel>
        <relationshipName>Expense_Report_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>inscor__External_Comments_rt__c</fullName>
        <label>External Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Internal_Comments_rt__c</fullName>
        <label>Internal Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Work_Order_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.inscor__Work_Order__c</field>
                <operation>equals</operation>
                <valueField>inscor__Work_Order_Task__c.inscor__Work_Order__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>inscor__Work_Order_Task__c</referenceTo>
        <relationshipLabel>Expense Report Lines</relationshipLabel>
        <relationshipName>Expense_Report_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>inscor__Work_Order__c</referenceTo>
        <relationshipLabel>Expense Report Lines</relationshipLabel>
        <relationshipName>Expense_Report_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Expense Report Line</label>
    <nameField>
        <displayFormat>ERL-{0}</displayFormat>
        <label>Expense Report Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Report Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>